--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2018-11-11}
+    \date{2018-11-15}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -659,7 +659,7 @@ library, and check it's current version:
 \end{Shaded}
 
 \begin{verbatim}
-#OUT> [1] '0.2.0'
+#OUT> [1] '0.2.1'
 \end{verbatim}
 
 \section{Data Types}\label{data-types}
@@ -7539,6 +7539,14 @@ off-diagonals.
   \href{slides/chapter5/chapter5.html}{chapter 5}
 \item
   \href{slides/chapter6/chapter6.html}{chapter 6}
+\end{itemize}
+
+\section{Worked Tutorials}\label{worked-tutorials}
+
+\begin{itemize}
+\tightlist
+\item
+  \href{images/trade.html}{Trade exercise}
 \end{itemize}
 
 \chapter{Notes}\label{notes}
