Update the book

--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-01-18}
+    \date{2019-03-05}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
@@ -3979,7 +3979,7 @@ the French population make in any given year, for example?
 
 \begin{verbatim}
 #OUT> # A tibble: 30 x 5
-#OUT> # Groups:   year [?]
+#OUT> # Groups:   year [10]
 #OUT>    Country.x      year  counts.x Country.y                    counts.y
 #OUT>    <chr>          <chr>    <int> <chr>                           <int>
 #OUT>  1 France         2008  64007193 Germany including former GDR 82217837
