--- a/ScPoEconometrics.tex
+++ b/ScPoEconometrics.tex
@@ -109,7 +109,7 @@
 \usepackage{titling}
 
 % Create subtitle command for use in maketitle
-\newcommand{\subtitle}[1]{
+\providecommand{\subtitle}[1]{
   \posttitle{
     \begin{center}\large#1\end{center}
     }
@@ -125,7 +125,7 @@
   \postauthor{\par}
       \predate{\centering\large\emph}
   \postdate{\par}
-    \date{2019-03-05}
+    \date{2019-04-03}
 
 \usepackage{booktabs}
 \usepackage{amsthm}
