edits on project

--- a/09-projects.Rmd
+++ b/09-projects.Rmd
@@ -24,8 +24,14 @@ In order to achieve those goals, you will interact with the Atlas website at [ht
 
 ### Questions
 
-1. Start by going to [https://www.opportunityatlas.org](https://www.opportunityatlas.org) and look at the census tracts around where your home is, if you grew up in the United States. If you grew up outside the US, randomly choose one of the State Capitals from [this list](https://en.wikipedia.org/wiki/List_of_capitals_in_the_United_States#State_capitals) and select any census tract at random by zooming in. Make sure to immediately post your choice of city in the corresponding slack channel (e.g. "florian-atlas" for my group) to avoid having multiple reports on the same city. Let's call this census tract your *home*. Figure 1 in your report should display the map shown by [https://www.opportunityatlas.org](https://www.opportunityatlas.org) for the census tracts around your home (you can download that map *as an image* bottom left). Your text should describe what is shown in that map, in particular what data are being visualized. Examine next the patterns for a number of different groups (e.g., lowest income children, high income children) and outcomes (e.g., earnings in adulthood, incarceration rates).  Only choose one or two of these to include in your report.  
-1. To answer this question, read the [Opportunity Atlas Manual](https://opportunityinsights.org/wp-content/uploads/2018/10/atlas_paper.pdf): What period do the data you are analyzing come from?  Are you concerned that the neighborhoods you are studying may have changed for kids now growing up there?  What evidence do Chetty et al. (2018) provide suggesting that such changes are or are not important?  What type of data could you use to test whether your neighborhood has changed in recent years?
+1. Referring to the [NYT article](https://www.nytimes.com/2018/10/01/upshot/maps-neighborhoods-shape-child-poverty.html): 
+    1. Why does the Seattle Housing Authority give away vouchers to pay for rent in the area between 100th and 115th Streets, east of Meridian, west of 35th Avenue?
+    1. The data here shows how easy it is for children of poor parents to escape poverty themselves. In explaining what makes a *good* neighborhood, how much of the variation we see is actually explained by things like school boundary lines and poverty levels alone? In other words, how *important* is the school you go to in isoluation of other factors, if you want to escape the low rank of your parents in the income distribution?
+    1. Some select census tracts have received up to 500 million USD since 1990 in place-based neighborhood improvement policies. Do we know if and to what extent those investments were efficacious?
+1. Go to [https://www.opportunityatlas.org](https://www.opportunityatlas.org) and look at the census tracts around where your home is, if you grew up in the United States. If you grew up outside the US, randomly choose one of the State Capitals from [this list](https://en.wikipedia.org/wiki/List_of_capitals_in_the_United_States#State_capitals) and select any census tract at random by zooming in. Make sure to immediately post your choice of city in the corresponding slack channel (e.g. "florian-atlas" for my group) to avoid having multiple reports on the same city. Let's call the chosen census tract your *home*. 
+    1. Create Figure 1 in your report, which should display the map shown by [https://www.opportunityatlas.org](https://www.opportunityatlas.org) for the census tracts around your home (you can download that map *as an image* bottom left). 
+    1. Your accompanying text should describe what is shown in that map, in particular what data are being visualized. Examine next the patterns for a number of different groups (e.g., lowest income children, high income children) and outcomes (e.g., earnings in adulthood, incarceration rates).  Only choose one or two of these to include in your report.  
+1. To answer the next question, read the [Opportunity Atlas Manual](https://opportunityinsights.org/wp-content/uploads/2018/10/atlas_paper.pdf): What period do the data you are analyzing come from?  Are you concerned that the neighborhoods you are studying may have changed for kids now growing up there?  What evidence do the authors of the manual provide suggesting that such changes are or are not important?  What type of data could you use to test whether your neighborhood has changed in recent years?
 1. Now turn to the `atlas.Rds` data set, which you can load as shown below. How does average upward mobility, pooling races and genders, for children with parents at the 25th percentile (`kfr_pooled_p25`) in your home Census tract compare to mean (population-weighted, using `count_pooled`) upward mobility in your state and in the U.S. overall?  Do kids where you grew up have better or worse chances of climbing the income ladder than the average child in America? 
 *Hint*: The Opportunity Atlas website will give you the tract, county, and state FIPS codes for your home address. For example, searching for “Lynwood Road, Verona, New Jersey” will display Tract 34013021000, Verona, NJ.  The first two digits refer to the state code, the next three digits refer to the county code, and the last 6 digits refer to the tract code.  In `R`, listing this observation can be done as follows:
 
@@ -35,7 +41,7 @@ In order to achieve those goals, you will interact with the Atlas website at [ht
     # subset data.frame
     subset(d, kfr_pooled_p25 if state == 34 & county == 013 & tract == 021000)
     ```
-1. What is the standard deviation of upward mobility (population-weighted) in your home county? Is it larger or smaller than the standard deviation across tracts in your state? Across tracts in the country? What do you learn from these comparisons? Notice that you can compute a weighted standard deviation for vector `x` using weights `weight_variable` in `R` like this
+1. What is the standard deviation of upward mobility (population-weighted) in your home county, and what does this number tell you? Is it larger or smaller than the standard deviation across tracts in your state (i.e. compare your county to all other counties in your state)? Across tracts in the entire country? What do you learn from these comparisons? Notice that you can compute a weighted standard deviation for vector `x` using weights `weight_variable` in `R` like this
     
     ```R
     # you need the Hmisc package installed. if not:
